# basic_chem

./: .gitignore  Jenkinsfile  README.md  requirements.txt  setup.cfg  setup.py
core_chem/: __init__.py  __main__.py  basic_calculations.py  boyles_law.py  conversions.py  element_properties.py
tests/: __init__.py  test_basic_calculation.py  test_boyles_law.py  test_entry_points.py
