[metadata]
name = Basic Chemistry
author = Steven T Murphy
author_email = steven.t.murphy3@gmail.com
description = Provides Basic Chemistry Functionality
long_description = file: README.md, LICENSE
keywords = chemistry, basic
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires = mendeleev